--- a/Agricola_Front/PersonalField/main.ui
+++ b/Agricola_Front/PersonalField/main.ui
@@ -16,7 +16,11 @@
   <widget class="QWidget" name="centralwidget">
    <layout class="QHBoxLayout" name="horizontalLayout_2">
     <item>
-     <layout class="QHBoxLayout" name="main"/>
+     <layout class="QHBoxLayout" name="main">
+      <property name="spacing">
+       <number>0</number>
+      </property>
+     </layout>
     </item>
    </layout>
   </widget>
