--- a/Agricola_Front/PersonalField/field_base.ui
+++ b/Agricola_Front/PersonalField/field_base.ui
@@ -165,6 +165,19 @@
           </widget>
          </item>
          <item>
+          <widget class="QPushButton" name="pushButton_3">
+           <property name="sizePolicy">
+            <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
+             <horstretch>0</horstretch>
+             <verstretch>0</verstretch>
+            </sizepolicy>
+           </property>
+           <property name="text">
+            <string>사람</string>
+           </property>
+          </widget>
+         </item>
+         <item>
           <spacer name="verticalSpacer_2">
            <property name="sizePolicy">
             <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
@@ -248,7 +261,7 @@
           </spacer>
          </item>
          <item>
-          <widget class="QPushButton" name="btn_personal_unit">
+          <widget class="QPushButton" name="btn_field_unit">
            <property name="sizePolicy">
             <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
              <horstretch>0</horstretch>
@@ -272,35 +285,12 @@
           </widget>
          </item>
          <item>
-          <widget class="QLabel" name="label">
-           <property name="sizePolicy">
-            <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
-             <horstretch>0</horstretch>
-             <verstretch>0</verstretch>
-            </sizepolicy>
-           </property>
-           <property name="minimumSize">
-            <size>
-             <width>0</width>
-             <height>0</height>
-            </size>
-           </property>
-           <property name="font">
-            <font>
-             <pointsize>14</pointsize>
-             <weight>50</weight>
-             <italic>false</italic>
-             <bold>false</bold>
-            </font>
-           </property>
+          <widget class="QPushButton" name="btn_field_unitcount">
            <property name="styleSheet">
-            <string notr="true"/>
+            <string notr="true">border: none;</string>
            </property>
            <property name="text">
             <string>x 3</string>
-           </property>
-           <property name="alignment">
-            <set>Qt::AlignCenter</set>
            </property>
           </widget>
          </item>
@@ -388,7 +378,7 @@
           </spacer>
          </item>
          <item>
-          <widget class="QPushButton" name="pushButton_4">
+          <widget class="QPushButton" name="btn_barn">
            <property name="sizePolicy">
             <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
              <horstretch>0</horstretch>
@@ -484,8 +474,6 @@
    </item>
   </layout>
  </widget>
- <resources>
-  <include location="images_Farm.qrc"/>
- </resources>
+ <resources/>
  <connections/>
 </ui>
